# server/Application/Models/Dtos/ApplicationBaseDto.cs
@@ -4,5 +4,5 @@ namespace Application.Models.Dtos;
 
 public abstract class ApplicationBaseDto
 {
-    [Required] public string EventType { get; set; } = null!;
+    [Required] public abstract string EventType { get; set; } 
 }
