# server/Infrastructure.Mqtt/SubscriptionHandlers/Dtos/ServerSendsMetricToAdminDto.cs
@@ -4,8 +4,10 @@ using Core.Domain.Entities;
 
 namespace Infrastructure.Mqtt;
 
-public class ServerSendsMetricToAdmin : ApplicationBaseDto
+public class ServerSendsMetricToAdminDto : ApplicationBaseDto
 {
     [Required]
     public List<Devicelog> Metrics { get; set; } = new();
+
+    public override string EventType { get; set; } = nameof(ServerSendsMetricToAdminDto);
 }
